--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-<title> 1.618034 </itle>
-</head>
-
+  <title> 1.618034 </title>
+  </head>
+    
 <body>
-<p>
-<img src="//i.imgur.com/IukYILS.png" width="350"/>
-</p>
-</body>
-</html>
+
+<body background="http://i.imgur.com/IukYILS.png">
+   
+<html>
