--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     
 <body>
 
-<body background="http://i.imgur.com/IukYILS.png">
+<body background="http://i.imgur.com/IukYILS.png" width="1080">
    
 <html>
