--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   </head>
     
 <body>
-
-<body background="http://i.imgur.com/IukYILS.png" width="1080">
+  
+<p>
+    <img src="http://i.imgur.com/IukYILS.png" width="1080"/>
+  </p>
+  
+  </body>
    
 <html>
