--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
   
 <p>
-    <img src="http://i.imgur.com/IukYILS.png" width="1080"/>
+  <img align="center" src="http://i.imgur.com/IukYILS.png" width="1080">
+ 
   </p>
   
   </body>
