--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     
 <body>
   
-<p>
-  <img align="center" src="http://i.imgur.com/IukYILS.png" width="1080">
- 
-  </p>
+<p align="center">
+  <img width="1920" height="1080" src="http://i.imgur.com/IukYILS.png">
+</p>
   
   </body>
    
