--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <p align="center">
   <img width="853" height="480" src="http://i.imgur.com/IukYILS.png">
 </p>
-  <h1> Do you see how the squares fit neatly together? 
-For example 5 and 8 make 13, 8 and 13 make 21, and so on. 
+  <h1>
+5 and 8 make 13, 8 and 13 make 21, and so on. 
   </h1>
   
   </body>
